cheese/cheese-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: stilton
  name: stilton
  namespace: cheese
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stilton
  template:
    metadata:
      labels:
        app: stilton
    spec:
      containers:
        - image: errm/cheese:stilton
          name: stilton
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: wensleydale
  name: wensleydale
  namespace: cheese
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wensleydale
  template:
    metadata:
      labels:
        app: wensleydale
    spec:
      containers:
        - image: errm/cheese:wensleydale
          name: wensleydale
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: cheddar
  name: cheddar
  namespace: cheese
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cheddar
  template:
    metadata:
      labels:
        app: cheddar
    spec:
      containers:
        - image: errm/cheese:cheddar
          name: cheddar
---
