cheese/cheese-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: stilton
  name: stilton
  namespace: cheese
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: stilton
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: cheddar
  name: cheddar
  namespace: cheese
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: cheddar
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: wensleydale
  name: wensleydale
  namespace: cheese
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: wensleydale
